--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
-  "//1": "describes your app and its dependencies",
-  "//2": "https://docs.npmjs.com/files/package.json",
-  "//3": "updating this file will download and update your packages",
-  "name": "my-hyperdev-app",
+  "name": "fcc-library",
   "version": "0.0.1",
-  "description": "What am I about?",
+  "description": "boilerplate",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -18,7 +15,8 @@
     "chai-http": "^4.3.0",
     "mocha": "^7.0.0",
     "zombie": "^6.1.4",
-    "helmet": "^3.21.2"
+    "helmet": "^3.21.2",
+    "mongoose": "5.8.11"
   },
   "engines": {
     "node": "4.4.3"
